--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack serve --config=webpack.config.dev.js",
-    "build": "rm -rf dist/ && webpack --config=webpack.config.prod.js"
+    "build": "rm -rf dist/ && webpack --config=webpack.config.prod.js",
+    "prettify": "prettier -w src/**/*.js"
   },
   "dependencies": {
     "react": "^17.0.1",
@@ -21,6 +22,7 @@
     "babel": "^6.23.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-add-module-exports": "^1.0.4",
+    "prettier": "^2.2.1",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
