--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "webpack serve --config=webpack.config.dev.js",
     "build": "rm -rf dist/ && webpack --config=webpack.config.prod.js",
-    "prettify": "prettier -w src/**/*.js"
+    "prettify": "prettier -w src/**/*.js",
+    "test": "jest"
   },
   "dependencies": {
     "react": "^17.0.1",
@@ -17,11 +18,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
+    "@babel/plugin-transform-modules-commonjs": "^7.15.0",
     "@babel/preset-env": "^7.13.8",
     "@babel/preset-react": "^7.12.13",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-add-module-exports": "^1.0.4",
+    "jest": "^27.0.6",
     "prettier": "^2.2.1",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
