--- a/.editorconfig
+++ b/.editorconfig
@@ -5,4 +5,5 @@ indent_size = 2
 charset = utf-8
 end_of_line = lf
 indent_style = space
+insert_final_newline = true
 trim_trailing_whitespace = true
