--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "webpack serve --config=webpack.config.dev.js",
     "build": "rm -rf dist/ && webpack --config=webpack.config.prod.js",
-    "prettify": "prettier -w src/**/*.js",
+    "prettify": "prettier -w src/**/*.js tests/**/*.js",
     "test": "jest"
   },
   "dependencies": {
